--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <title>Exemplo do Google Maps</title>
+  <title>Google Maps Plugin</title>
 </head>
 <body>
   <div id="map" style="height: 400px; width: 600px; margin: 5% auto;"></div>
