--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="map" style="height: 400px; width: 600px; margin: 5% auto;"></div>
 
   <!-- Importe a API do Google Maps usando a chave de API -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy5hgwzJxyEt7akawDXLSb8SFc8I4FX54&callback=initMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=INSERT_YOUR_API_KEY&callback=initMap" async defer></script>
   <script src="main.js"></script>
 </body>
 </html>
